Set up `defaultLocale` user config option

--- a/docs/src/content/docs/guides/i18n.md
+++ b/docs/src/content/docs/guides/i18n.md
@@ -16,6 +16,8 @@ StarBook provides built-in support for multilingual sites.
    export default defineConfig({
      integrations: [
        starbook({
+         // Set English as the default language for this site.
+         defaultLocale: 'en',
          locales: {
            // English docs in `src/content/docs/en/`
            en: {
