Rename to “Starlight” in docs

--- a/docs/src/content/docs/guides/i18n.md
+++ b/docs/src/content/docs/guides/i18n.md
@@ -2,11 +2,11 @@
 title: Internationalization (i18n)
 ---
 
-StarBook provides built-in support for multilingual sites.
+Starlight provides built-in support for multilingual sites.
 
 ## Configure i18n
 
-1. Tell StarBook about the languages you support by passing a `locales` object to the StarBook integration:
+1. Tell Starlight about the languages you support by passing a `locales` object to the Starlight integration:
 
    ```js
    // astro.config.mjs
