--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -2,7 +2,7 @@
 title: Welcome, world
 ---
 
-My docs are built with StarBook.
+My docs are built with Starlight.
 
 :::tip[Did you know?]
 Astro helps you build faster websites with [“Islands Architecture”](https://docs.astro.build/en/concepts/islands/).
