Use new name in code

--- a/docs/src/content/docs/guides/i18n.md
+++ b/docs/src/content/docs/guides/i18n.md
@@ -11,11 +11,11 @@ Starlight provides built-in support for multilingual sites.
    ```js
    // astro.config.mjs
    import { defineConfig } from 'astro/config';
-   import starbook from 'starbook';
+   import starlight from 'starlight';
 
    export default defineConfig({
      integrations: [
-       starbook({
+       starlight({
          // Set English as the default language for this site.
          defaultLocale: 'en',
          locales: {
