Add WIP notes to docs

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -2,8 +2,7 @@
 title: Welcome, world
 ---
 
-My docs are built with Starlight.
-
-:::tip[Did you know?]
-Astro helps you build faster websites with [“Islands Architecture”](https://docs.astro.build/en/concepts/islands/).
+:::caution[Work in progress]
+Starlight is in early development so expect bugs and changes as we develop it.
+If you find something that’s not working, [open an issue on GitHub](https://github.com/withastro/starlight/issues/new/choose) or let us know on [Discord](https://astro.build/chat).
 :::
