Rename the main package to `@astrojs/starlight`

--- a/docs/src/content/docs/guides/i18n.md
+++ b/docs/src/content/docs/guides/i18n.md
@@ -11,7 +11,7 @@ Starlight provides built-in support for multilingual sites.
    ```js
    // astro.config.mjs
    import { defineConfig } from 'astro/config';
-   import starlight from 'starlight';
+   import starlight from '@astrojs/starlight';
 
    export default defineConfig({
      integrations: [
