--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,5 +1,6 @@
 ---
 title: Welcome, world
+description: Starlight helps you build beautiful, high-performance documentation websites with Astro.
 ---
 
 :::caution[Work in progress]
