Remove unused `id` prop from `<TabItem>`

--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -17,7 +17,7 @@ Welcome to Starlight, an intuitive and user-friendly framework ideal for documen
 Starlight is built on top of the [Astro](https://astro.build) all-in-one framework. You can create a new Astro + Starlight project using the following command:
 
 <Tabs>
-<TabItem id="npm">
+<TabItem label="npm">
 
 ```sh
 # create a new project with npm
@@ -25,7 +25,7 @@ npm create astro --template starlight
 ```
 
 </TabItem>
-<TabItem id="pnpm">
+<TabItem label="pnpm">
 
 ```sh
 # create a new project with pnpm
@@ -33,7 +33,7 @@ pnpm create astro --template starlight
 ```
 
 </TabItem>
-<TabItem id="yarn" label="Yarn">
+<TabItem label="Yarn">
 
 ```sh
 # create a new project with pnpm
