--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -3,6 +3,8 @@ title: Getting Started
 description: Learn how to start building your next documentation site with Starlight by Astro.
 ---
 
+import { Tabs, TabItem } from '@astrojs/starlight/components';
+
 :::caution[Work in progress]
 Starlight is in early development so expect bugs and changes as we develop it.
 If you find something that’s not working, [open an issue on GitHub](https://github.com/withastro/starlight/issues/new/choose) or let us know on [Discord](https://astro.build/chat).
@@ -14,10 +16,32 @@ Welcome to Starlight, an intuitive and user-friendly framework ideal for documen
 
 Starlight is built on top of the [Astro](https://astro.build) all-in-one framework. You can create a new Astro + Starlight project using the following command:
 
+<Tabs>
+<TabItem label="npm">
+
 ```sh
 # create a new project with npm
 npm create astro --template starlight
 ```
+
+</TabItem>
+<TabItem label="pnpm">
+
+```sh
+# create a new project with pnpm
+pnpm create astro --template starlight
+```
+
+</TabItem>
+<TabItem label="Yarn">
+
+```sh
+# create a new project with pnpm
+yarn create astro --template starlight
+```
+
+</TabItem>
+</Tabs>
 
 This will create a new project directory with all the necessary files and configurations for your site.
 
