Rejig intro docs pages a little

--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -10,9 +10,7 @@ Starlight is in early development so expect bugs and changes as we develop it.
 If you find something that’s not working, [open an issue on GitHub](https://github.com/withastro/starlight/issues/new/choose) or let us know on [Discord](https://astro.build/chat).
 :::
 
-Welcome to Starlight, an intuitive and user-friendly framework ideal for documentation websites. In this introductory guide, we will explore the main features and benefits of Starlight.
-
-## Getting started with Starlight
+## Creating a new project
 
 Starlight is built on top of the [Astro](https://astro.build) all-in-one framework. You can create a new Astro + Starlight project using the following command:
 
@@ -44,20 +42,6 @@ yarn create astro --template starlight
 </Tabs>
 
 This will create a new project directory with all the necessary files and configurations for your site.
-
-## What’s in the box?
-
-Starlight includes all the features you need to get a documentation site up and running quickly:
-
-- Easy-to-read typographic styles
-- Syntax highlighting for code blocks
-- Simple-to-configure navigation menus
-- Built-in site search
-- [Internationalization features](/guides/i18n)
-- Mix components (from any framework!) and content in MDX
-- Support for custom styles
-
-With these features, you can create rich and engaging documentation that is easy to read and understand.
 
 ## Creating content with Starlight
 
