--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -7,3 +7,19 @@ description: Starlight helps you build beautiful, high-performance documentation
 Starlight is in early development so expect bugs and changes as we develop it.
 If you find something that’s not working, [open an issue on GitHub](https://github.com/withastro/starlight/issues/new/choose) or let us know on [Discord](https://astro.build/chat).
 :::
+
+## What’s in the box?
+
+Starlight includes all the features you need to get a documentation site up and running quickly:
+
+- Easy-to-read typographic styles
+- Syntax highlighting for code blocks
+- Simple-to-configure navigation menus
+- Built-in site search
+- [Internationalization features](/guides/i18n)
+- Mix components (from any framework!) and content in MDX
+- Support for custom styles
+- Fast and [eco-friendly](/environmental-impact) architecture
+- Compatibility with the [Astro ecosystem](https://astro.build/integrations)
+
+With these features, you can create rich and engaging documentation that is easy to read and understand.
