Tweak index list

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -12,14 +12,14 @@ If you find something that’s not working, [open an issue on GitHub](https://gi
 
 Starlight includes all the features you need to get a documentation site up and running quickly:
 
+- Markdown and MDX support
 - Easy-to-read typographic styles
 - Syntax highlighting for code blocks
 - Simple-to-configure navigation menus
 - Built-in site search
 - [Internationalization features](/guides/i18n)
-- Mix components (from any framework!) and content in MDX
+- Accessible site structure
+- [Component in content](/guides/components) support with MDX
 - Support for custom styles
 - Fast and [eco-friendly](/environmental-impact) architecture
 - Compatibility with the [Astro ecosystem](https://astro.build/integrations)
-
-With these features, you can create rich and engaging documentation that is easy to read and understand.
