Update npm create command

--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -19,7 +19,7 @@ Starlight is built on top of the [Astro](https://astro.build) all-in-one framewo
 
 ```sh
 # create a new project with npm
-npm create astro --template starlight
+npm create astro -- --template starlight
 ```
 
 </TabItem>
