Fix create command with full template path
Would be good to alias to `--template starlight/basics` in create-astro eventually but this works for now.

--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -19,7 +19,7 @@ Starlight is built on top of the [Astro](https://astro.build) all-in-one framewo
 
 ```sh
 # create a new project with npm
-npm create astro -- --template starlight
+npm create astro -- --template withastro/starlight/examples/basics
 ```
 
 </TabItem>
@@ -27,7 +27,7 @@ npm create astro -- --template starlight
 
 ```sh
 # create a new project with pnpm
-pnpm create astro --template starlight
+pnpm create astro --template withastro/starlight/examples/basics
 ```
 
 </TabItem>
@@ -35,7 +35,7 @@ pnpm create astro --template starlight
 
 ```sh
 # create a new project with pnpm
-yarn create astro --template starlight
+yarn create astro --template withastro/starlight/examples/basics
 ```
 
 </TabItem>
