Update i18n docs to reflect built-in language support

--- a/docs/src/content/docs/guides/i18n.md
+++ b/docs/src/content/docs/guides/i18n.md
@@ -100,9 +100,11 @@ If a translation is not yet available for a language, Starlight will show reader
 
 ## Translate Starlight’s UI
 
-Starlight ships with a UI in English.
-For example, the theme select menu shows theme names as “Dark”, “Light”, and “Auto”.
-You can provide translations for all the languages you support via the `i18n` data collection.
+Some of Starlight’s default UI requires text labels to work.
+For example, the table of contents on this page has an “On this page” heading in English.
+We aim to ship these labels in as many languages as possible but currently only have support for English, German, and Spanish.
+
+You can provide translations for additional languages you support — or override our default labels — via the `i18n` data collection.
 
 1. Configure the `i18n` data collection in `src/content/config.ts` if it isn’t configured already:
 
