Small docs tweak to reflect lang over locale

--- a/docs/src/content/docs/guides/i18n.md
+++ b/docs/src/content/docs/guides/i18n.md
@@ -119,13 +119,13 @@ You can provide translations for additional languages you support — or overrid
    ```
 
 2. Create a JSON file in `src/content/i18n/` for each locale you want to translate Starlight’s UI for.
-   For example, this would add translation files for Arabic and Chinese:
+   For example, this would add translation files for Arabic and Simplified Chinese:
 
    - src/
      - content/
        - i18n/
          - ar.json
-         - zh.json
+         - zh-CN.json
 
 3. Add translations for the keys you want to translate to the JSON files. You can use the English defaults to help you translate:
 
