--- a/docs/src/content/docs/guides/i18n.md
+++ b/docs/src/content/docs/guides/i18n.md
@@ -92,8 +92,67 @@ When using a `root` locale, place pages for that language directly in `src/conte
       - zh/
         - index.md
 
+#### Monolingual sites
+
+If you have a single language site, you can set the root locale to configure its language.
+This allows you to override Starlight’s default language, which is English, but won’t enable other internationalization features like the language picker.
+
 ## Fallback content
 
 Starlight expects you to create equivalent pages in all your languages. For example, if you have an `en/about.md` file, you should create an `about.md` for each other language you support.
 
 If a translation is not yet available for a language, Starlight will show readers the content for that page in the default language (set via `defaultLocale`). For example, if you have not yet created a French version of an about page and your default language is English, visitors to `/fr/about` will see the English content. This helps you add content in your default language and then progressively translate it when your translators have time.
+
+## Translate Starlight’s UI
+
+Some of Starlight’s default UI requires text labels to work.
+For example, the table of contents on this page has an “On this page” heading in English.
+We aim to ship these labels in as many languages as possible but currently only have support for English, German, and Spanish.
+
+You can provide translations for additional languages you support — or override our default labels — via the `i18n` data collection.
+
+1. Configure the `i18n` data collection in `src/content/config.ts` if it isn’t configured already:
+
+   ```js
+   import { defineCollection } from 'astro:content';
+   import { docsSchema, i18nSchema } from '@astrojs/starlight/schema';
+
+   export const collections = {
+     docs: defineCollection({ schema: docsSchema() }),
+     i18n: defineCollection({ type: 'data', schema: i18nSchema() }),
+   };
+   ```
+
+2. Create a JSON file in `src/content/i18n/` for each locale you want to translate Starlight’s UI for.
+   For example, this would add translation files for Arabic and Simplified Chinese:
+
+   - src/
+     - content/
+       - i18n/
+         - ar.json
+         - zh-CN.json
+
+3. Add translations for the keys you want to translate to the JSON files. You can use the English defaults to help you translate:
+
+   ```json
+   {
+     "skipLink.label": "Skip to content",
+     "search.label": "Search",
+     "search.shortcutLabel": "(Press / to Search)",
+     "search.cancelLabel": "Cancel",
+     "themeSelect.accessibleLabel": "Select theme",
+     "themeSelect.dark": "Dark",
+     "themeSelect.light": "Light",
+     "themeSelect.auto": "Auto",
+     "languageSelect.accessibleLabel": "Select language",
+     "menuButton.accessibleLabel": "Menu",
+     "sidebarNav.accessibleLabel": "Main",
+     "tableOfContents.onThisPage": "On this page",
+     "tableOfContents.overview": "Overview",
+     "i18n.untranslatedContent": "This content is not available in your language yet.",
+     "page.editLink": "Edit page",
+     "page.lastUpdated": "Last updated:",
+     "page.previousLink": "Next",
+     "page.nextLink": "Previous"
+   }
+   ```
