Fix typo in English UI strings

--- a/packages/starlight/translations/en.json
+++ b/packages/starlight/translations/en.json
@@ -15,6 +15,6 @@
   "i18n.untranslatedContent": "This content is not available in your language yet.",
   "page.editLink": "Edit page",
   "page.lastUpdated": "Last updated:",
-  "page.previousLink": "Next",
-  "page.nextLink": "Previous"
+  "page.previousLink": "Previous",
+  "page.nextLink": "Next"
 }
