Tweak getting started docs

--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -47,7 +47,7 @@ This will create a new project directory with all the necessary files and config
 
 Starlight supports authoring content in Markdown and MDX.
 
-Adding new pages is done by adding a new `.md` or `.mdx` file to `src/content/docs/`. For example, `src/content/docs/hello-world.md` will be available on your site at `/hello-world`.
+You can add new pages by creating `.md` or `.mdx` files in `src/content/docs/`. For example, `src/content/docs/hello-world.md` will be available on your site at `/hello-world`.
 
 All Starlight pages share a common set of frontmatter properties you can set to control how the page appears:
 
