fix: fix Yarn tab displaying PNPM

--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -34,7 +34,7 @@ pnpm create astro --template withastro/starlight/examples/basics
 <TabItem label="Yarn">
 
 ```sh
-# create a new project with pnpm
+# create a new project with yarn
 yarn create astro --template withastro/starlight/examples/basics
 ```
 
