--- a/docs/src/content/docs/guides/i18n.md
+++ b/docs/src/content/docs/guides/i18n.md
@@ -58,7 +58,7 @@ Starlight provides built-in support for multilingual sites, including routing, f
 
 You can use a “root” locale to serve a language without any i18n prefix in its path. For example, if English is your root locale, an English page path might look like `/about` instead of `/en/about`.
 
-To set a root locale, use the `root` key in your `locales` config:
+To set a root locale, use the `root` key in your `locales` config and remove `defaultLocale` (or set to `root`):
 
 ```js
 // astro.config.mjs
@@ -68,6 +68,7 @@ import starlight from '@astrojs/starlight';
 export default defineConfig({
   integrations: [
     starlight({
+      defaultLocale: 'root', // optional
       locales: {
         root: {
           label: 'English',
