Add required title to complete code snippets

--- a/docs/src/content/docs/guides/i18n.md
+++ b/docs/src/content/docs/guides/i18n.md
@@ -17,6 +17,7 @@ Starlight provides built-in support for multilingual sites, including routing, f
    export default defineConfig({
      integrations: [
        starlight({
+         title: 'My Docs',
          // Set English as the default language for this site.
          defaultLocale: 'en',
          locales: {
@@ -68,6 +69,7 @@ import starlight from '@astrojs/starlight';
 export default defineConfig({
   integrations: [
     starlight({
+      title: 'My Docs',
       locales: {
         root: {
           label: 'English',
