--- a/docs/src/content/docs/guides/i18n.md
+++ b/docs/src/content/docs/guides/i18n.md
@@ -1,6 +1,6 @@
 ---
 title: Internationalization (i18n)
-i18n: Learn how to configure your Starlight site to support multiple languages.
+description: Learn how to configure your Starlight site to support multiple languages.
 ---
 
 Starlight provides built-in support for multilingual sites, including routing, fallback content, and full right-to-left (RTL) language support.
