--- a/docs/src/content/docs/guides/i18n.md
+++ b/docs/src/content/docs/guides/i18n.md
@@ -110,7 +110,7 @@ If a translation is not yet available for a language, Starlight will show reader
 
 Some of Starlight’s default UI requires text labels to work.
 For example, the table of contents on this page has an “On this page” heading in English.
-We aim to ship these labels in as many languages as possible but currently only have support for English, German, and Spanish.
+We aim to ship these labels in as many languages as possible but currently only have support for English, German, Japanese, and Spanish.
 
 You can provide translations for additional languages you support — or override our default labels — via the `i18n` data collection.
 
