Remove duplicate English text

--- a/docs/src/content/docs/ja/index.mdx
+++ b/docs/src/content/docs/ja/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: ようこそ、世界
-description: Starlight helps you build beautiful, high-performance documentation websites with Astro. Starlightは、Astroを使って美しく高性能なドキュメントサイトを作るためのテーマです。
+description: Starlightは、Astroを使って美しく高性能なドキュメントサイトを作るためのテーマです。
 ---
 
 :::caution[作業中]
