Make the "Contribute" string in the right sidebar translatable

--- a/packages/starlight/translations/de.json
+++ b/packages/starlight/translations/de.json
@@ -12,6 +12,7 @@
   "sidebarNav.accessibleLabel": "Hauptnavigation",
   "tableOfContents.onThisPage": "Auf dieser Seite",
   "tableOfContents.overview": "Überblick",
+  "tableOfContents.contribute": "Wirke mit",
   "i18n.untranslatedContent": "Dieser Inhalt ist noch nicht in deiner Sprache verfügbar.",
   "page.editLink": "Seite bearbeiten",
   "page.lastUpdated": "Zuletzt bearbeitet:",
