--- a/packages/starlight/translations/es.json
+++ b/packages/starlight/translations/es.json
@@ -12,6 +12,7 @@
   "sidebarNav.accessibleLabel": "Primario",
   "tableOfContents.onThisPage": "En esta página",
   "tableOfContents.overview": "Sinopsis",
+  "tableOfContents.contribute": "Contribuye",
   "i18n.untranslatedContent": "Esta página aún no está disponible en tu idioma.",
   "page.editLink": "Edita esta página",
   "page.lastUpdated": "Última actualización:",
