--- a/packages/starlight/translations/en.json
+++ b/packages/starlight/translations/en.json
@@ -12,6 +12,7 @@
   "sidebarNav.accessibleLabel": "Main",
   "tableOfContents.onThisPage": "On this page",
   "tableOfContents.overview": "Overview",
+  "tableOfContents.contribute": "Contribute",
   "i18n.untranslatedContent": "This content is not available in your language yet.",
   "page.editLink": "Edit page",
   "page.lastUpdated": "Last updated:",
