--- a/packages/starlight/translations/ja.json
+++ b/packages/starlight/translations/ja.json
@@ -12,6 +12,7 @@
   "sidebarNav.accessibleLabel": "メイン",
   "tableOfContents.onThisPage": "目次",
   "tableOfContents.overview": "概要",
+  "tableOfContents.contribute": "貢献する",
   "i18n.untranslatedContent": "このコンテンツはまだ日本語訳がありません。",
   "page.editLink": "ページを編集",
   "page.lastUpdated": "最終更新日:",
