Rename `pageType` => `template`

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Welcome, world
 description: Starlight helps you build beautiful, high-performance documentation websites with Astro.
-pageType: splash
+template: splash
 ---
 
 :::caution[Work in progress]
