--- a/docs/src/content/docs/de/index.mdx
+++ b/docs/src/content/docs/de/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Wilkommen, Welt
 description: Erstelle schöne, leistungsstarke Dokumentations-Websites mit Starlight und Astro.
-pageType: splash
+template: splash
 ---
 
 :::caution[Laufende Arbeiten]
