--- a/docs/src/content/docs/es/index.mdx
+++ b/docs/src/content/docs/es/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: Bienvenido, mundo
 description: Starlight te ayuda a construir sitios web de documentación hermosos y de alto rendimiento con Astro.
-pageType: splash
+template: splash
 ---
 
 :::caution[Trabajo en progreso]
