--- a/docs/src/content/docs/ja/index.mdx
+++ b/docs/src/content/docs/ja/index.mdx
@@ -1,7 +1,7 @@
 ---
 title: ようこそ、世界
 description: Starlightは、Astroを使って美しく高性能なドキュメントサイトを作るためのテーマです。
-pageType: splash
+template: splash
 ---
 
 :::caution[作業中]
