--- a/docs/src/content/docs/de/index.mdx
+++ b/docs/src/content/docs/de/index.mdx
@@ -1,5 +1,7 @@
 ---
 title: Wilkommen, Welt
+description: Erstelle schöne, leistungsstarke Dokumentations-Websites mit Starlight und Astro.
+template: splash
 ---
 
 :::caution[Laufende Arbeiten]
