--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Welcome, world
 description: Starlight helps you build beautiful, high-performance documentation websites with Astro.
+template: splash
 ---
 
 :::caution[Work in progress]
