Configure heros in `/en/` & `/de/`

--- a/docs/src/content/docs/de/index.mdx
+++ b/docs/src/content/docs/de/index.mdx
@@ -1,7 +1,20 @@
 ---
-title: Wilkommen, Welt
+title: Starlight 🌟 Einfache Dokumentations-Websites mit Astro
 description: Erstelle schöne, leistungsstarke Dokumentations-Websites mit Starlight und Astro.
 template: splash
+hero:
+  title: Bringe deine Dokumentation mit Starlight zum Leuchten
+  tagline: Alles, was du brauchst, um eine erstklassige Dokumentations-Website zu erstellen. Schnell, barrierefrei und einfach zu bedienen.
+  image:
+    file: ../../../assets/hero-star.webp
+  actions:
+    - text: Los geht's
+      icon: right-arrow
+      variant: primary
+      link: /de/getting-started/
+    - text: Auf GitHub
+      icon: external
+      link: https://github.com/withastro/starlight
 ---
 
 :::caution[Laufende Arbeiten]
