Add learn more link to about Astro section

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -40,7 +40,9 @@ import AboutAstro from '../../components/about-astro.astro';
 </CardGrid>
 
 <AboutAstro title="Brought to you by">
-  Astro is the all-in-one web framework designed for speed. Pull your content
-  from anywhere and deploy everywhere, all powered by your favorite UI
-  components and libraries.
+Astro is the all-in-one web framework designed for speed.
+Pull your content from anywhere and deploy everywhere, all powered by your favorite UI components and libraries.
+
+[Learn about Astro](https://astro.build/)
+
 </AboutAstro>
