--- a/docs/src/content/docs/de/index.mdx
+++ b/docs/src/content/docs/de/index.mdx
@@ -17,23 +17,31 @@ hero:
       link: https://github.com/withastro/starlight
 ---
 
-:::caution[Laufende Arbeiten]
-Starlight befindet sich in einem frühen Entwicklungsstadium, also rechne mit Fehlern und Änderungen, während wir es weiterentwickeln.
-Wenn du etwas findest, das nicht funktioniert, [öffne bitte ein Issue auf GitHub](https://github.com/withastro/starlight/issues/new/choose) oder gib uns auf [Discord](https://astro.build/chat) Bescheid.
-:::
+import { CardGrid, Card } from '@astrojs/starlight/components';
+import AboutAstro from '../../../components/about-astro.astro';
 
-## Was ist im Lieferumfang enthalten?
+<CardGrid stagger>
+  <Card title="Dokumentation, die begeistert" icon="open-book">
+    Site-Navigation, Suche, Internationalisierung, SEO, leicht lesbare
+    Typografie, Code-Hervorhebung, Dunkelmodus und mehr.
+  </Card>
+  <Card title="Angetrieben durch Astro" icon="rocket">
+    Nutze die volle Kraft und Leistung von Astro. Erweitere Starlight mit deinen
+    bevorzugten Astro-Integrationen.
+  </Card>
+  <Card title="Markdown, Markdoc und MDX" icon="document">
+    Bringe deine bevorzugte Dokumentenformat mit. Starlight behält alles im Auge
+    mit integrierte Frontmatter-Validierung.
+  </Card>
+  <Card title="Bringe deine eigenen Komponenten mit" icon="puzzle">
+    Starlight wird als Framework-unabhängige, vollständige Dokumentationslösung
+    geliefert. Erweitere mit React, Vue, Svelte, Solid und mehr.
+  </Card>
+</CardGrid>
 
-Starlight enthält alle notwendige Funktionen, um eine Dokumentationsseite schnell zum Laufen zu bringen:
+<AboutAstro title="Präsentiert von">
+Astro ist ein Web-Framework, das eine Komplettlösung zur Erstellung schneller Websites darstellt. Rufe deine Inhalte von überall ab und stelle sie überall bereit, alles unterstützt durch deine bevorzugten UI-Komponenten und Bibliotheken.
 
-- Unterstützung von Markdown und MDX
-- Leicht zu lesende typografische Stile
-- Syntaxhervorhebung für Code-Beispiele
-- Einfach zu konfigurierende Navigationsmenüs
-- Eingebaute Suchfunktion
-- [Internationalisierungsfunktionen](/de/guides/i18n)
-- Barrierfreie Seitenaufbau
-- Unterstützung von [Komponenten im Inhalt](/de/guides/components) mit MDX
-- Unterstützung für benutzerdefinierte Stile
-- Schnelle und [umweltfreundliche](/de/environmental-impact) Architektur
-- Kompatibilität mit dem [Astro-Ökosystem](https://astro.build/integrations)
+[Erfahre mehr über Astro](https://astro.build/)
+
+</AboutAstro>
