--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -22,8 +22,8 @@ import AboutAstro from '../../components/about-astro.astro';
 
 <CardGrid stagger>
   <Card title="Documentation that delights" icon="open-book">
-    Includes: Site navigation, search, i18n, SEO, easy-to-read typography, code
-    highlighting, dark mode and more.
+    Includes: Site navigation, search, internationalisation, SEO, easy-to-read
+    typography, code highlighting, dark mode and more.
   </Card>
   <Card title="Powered by Astro" icon="rocket">
     Leverage the full power and performance of Astro. Extend Starlight with your
