--- a/docs/src/content/docs/ja/index.mdx
+++ b/docs/src/content/docs/ja/index.mdx
@@ -1,25 +1,43 @@
 ---
-title: ようこそ、世界
-description: Starlightは、Astroを使って美しく高性能なドキュメントサイトを作るためのテーマです。
+title: Starlight 🌟 Astroでドキュメントサイトを作る
+description: Starlightは、Astroを使った美しく高性能なドキュメントサイトの構築を支援します。
 template: splash
+hero:
+  title: Starlightでドキュメントを輝かせる
+  tagline: 最高のドキュメントサイトを作るために必要なものがすべて揃っています。高速でアクセシブル、しかも使いやすさも備えます。
+  image:
+    file: ../../../assets/hero-star.webp
+  actions:
+    - text: はじめる
+      icon: right-arrow
+      variant: primary
+      link: /ja/getting-started/
+    - text: GitHubで見る
+      icon: external
+      link: https://github.com/withastro/starlight
 ---
 
-:::caution[作業中]
-Starlightはまだ開発の初期段階にあり、開発が進むにつれバグや変更が生じることが予想されます。何か不具合を見つけた場合は、[GitHubでissueを開く](https://github.com/withastro/starlight/issues/new/choose)か、または[Discord](https://astro.build/chat)でお知らせください。
-:::
+import { CardGrid, Card } from '@astrojs/starlight/components';
+import AboutAstro from '../../../components/about-astro.astro';
 
-## 何ができますか？
+<CardGrid stagger>
+  <Card title="心躍るドキュメント" icon="open-book">
+    サイトナビゲーション、検索、国際化、SEO、読みやすいタイポグラフィ、コードハイライト、ダークモードなどを内蔵しています。
+  </Card>
+  <Card title="Astro製" icon="rocket">
+    Astroのパワーとパフォーマンスを最大限に活用できます。お気に入りのAstroインテグレーションやライブラリで、Starlightを拡張できます。
+  </Card>
+  <Card title="Markdown、Markdoc、MDX" icon="document">
+    お好みのマークアップ言語を使えます。Starlightは、TypeScriptの型安全性を活かしたフロントマターのバリデーションを組み込みで提供します。
+  </Card>
+  <Card title="独自のUIコンポーネントの利用" icon="puzzle">
+    Starlightは、特定のフレームワークに依存しない、ドキュメント向けの完全なソリューションとして提供されています。React、Vue、Svelte、Solidなどで拡張可能です。
+  </Card>
+</CardGrid>
 
-Starlightには、ドキュメンテーションサイトを迅速に立ち上げるために必要なすべての機能が含まれています。
+<AboutAstro title="提供:">
+Astroは、速度を重視して設計されたオールインワンのウェブフレームワークです。お気に入りのUIコンポーネントやライブラリを使って、どこからでもコンテンツを取得し、どこにでもデプロイできます。
 
-- MarkdownとMDXのサポート
-- 見やすいタイポグラフィ
-- コードブロックのシンタックスハイライト
-- 簡単に設定可能なナビゲーションメニュー
-- 組み込みのサイト内検索
-- [国際化機能](/ja/guides/i18n)
-- アクセシブルなサイト構造
-- MDX[コンテンツ内でのコンポーネント](/ja/guides/components)のサポート
-- カスタムスタイルのサポート
-- 高速で[環境に優しい](/ja/environmental-impact)アーキテクチャ
-- [Astroエコシステム](https://astro.build/integrations)との互換性
+[Astroについて](https://astro.build/)
+
+</AboutAstro>
