Fix link target
Co-authored-by: Shinya Fujino <shf0811@gmail.com>

--- a/docs/src/content/docs/es/index.mdx
+++ b/docs/src/content/docs/es/index.mdx
@@ -11,7 +11,7 @@ hero:
     - text: Empezar
       icon: right-arrow
       variant: primary
-      link: /getting-started/
+      link: /es/getting-started/
     - text: Ver en GitHub
       icon: external
       link: https://github.com/withastro/starlight
