Fix repeated word

--- a/docs/src/content/docs/es/index.mdx
+++ b/docs/src/content/docs/es/index.mdx
@@ -30,7 +30,7 @@ import AboutAstro from '../../../components/about-astro.astro';
   <Card title="Markdown, Markdoc y MDX" icon="document">
     Lleva tu lenguaje de marcado favorito. Starlight te ofrece validación de frontmatter integrada con seguridad de tipos en TypeScript.
   </Card>
-  <Card title="Lleva tus propios componentes de de UI" icon="puzzle">
+  <Card title="Lleva tus propios componentes de UI" icon="puzzle">
     Starlight se ofrece como una solución completa para la documentación, independiente de cualquier framework. Puedes extenderlo con React, Vue, Svelte, Solid y otros.
   </Card>
 </CardGrid>
