docs: Add StackBlitz link to getting started

--- a/docs/src/content/docs/getting-started.mdx
+++ b/docs/src/content/docs/getting-started.mdx
@@ -43,6 +43,11 @@ yarn create astro --template starlight
 
 This will create a new project directory with all the necessary files and configurations for your site.
 
+:::tip[See it in action]
+Try Starlight in your browser:
+[open the template on StackBlitz](https://stackblitz.com/github/withastro/starlight/tree/main/examples/basics).
+:::
+
 ## Creating content with Starlight
 
 Starlight supports authoring content in Markdown and MDX.
