--- a/docs/src/content/docs/es/getting-started.mdx
+++ b/docs/src/content/docs/es/getting-started.mdx
@@ -42,7 +42,7 @@ yarn create astro --template starlight
 
 Esto creará un nuevo directorio de proyecto con todos los archivos y configuraciones necesarios para tu sitio.
 
-:::tip[Verlo en acción]
+:::tip[Míralo en acción]
 Prueba Starlight en tu navegador:
 [abre la plantilla en StackBlitz](https://stackblitz.com/github/withastro/starlight/tree/main/examples/basics).
 :::
